--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.11.0",
+    "@codeday/topo": "^1.2.1",
+    "@codeday/topocons": "^1.3.0",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@codeday/eslint-config": "^1.3.0",
+    "eslint": "^6.8.0"
   }
 }
